Fix download section on 200% text-only zoom
No more overlap

--- a/themes/navsite/static/css/style.css
+++ b/themes/navsite/static/css/style.css
@@ -240,8 +240,12 @@ body {
 }
 
 .download-alt-content p {
-    height:110px;
+    height:fit-content;
     display:block;
+}
+
+.download-alt-content .btn-group {
+    margin-top: 1.8em !important;
 }
 
 /* TOUR SECTION
